News UAT/force-app/main/default/objects/Survey_Question_Choice__c/fields/Available_del__c.field-meta.xml
<CustomField>
    <fullName>Available_del__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available</label>
    <type>Checkbox</type>
</CustomField>