News UAT/force-app/main/default/objects/Survey_Question_Choice__c/fields/Choice__c.field-meta.xml
<CustomField>
    <fullName>Choice__c</fullName>
    <label>Choice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>