News UAT/force-app/main/default/objects/Survey_Question_Choice__c/fields/NotApplicable__c.field-meta.xml
<CustomField>
    <fullName>NotApplicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Be Not Applicable</label>
    <type>Checkbox</type>
</CustomField>