News UAT/force-app/main/default/objects/Survey_Question_Choice__c/fields/OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderNumber__c</fullName>
    <label>OrderNumber</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>